bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:4: error: not found: value negatif
    if(!negatif){
        ^PosNeg:12: error: type mismatch;
 found   : Unit
 required: Boolean
 } else if(a<0){
        ^